// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoanDetails Unit Test - Resolver query loanDetails 1 by id 1`] = `
Object {
  "approvedAmt": null,
  "comment": null,
  "contact": Object {
    "email": "c0001@fake.it",
    "name": "Contact 1",
    "phone": "555-0001",
    "salutation": null,
    "title": null,
  },
  "currency": "HKD",
  "loanId": "L0001",
  "loanType": "Post-Shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Loan Requester 1",
    "registration": "REG-0001",
    "type": null,
  },
  "startDate": "1542385275431",
  "tenor": 76,
}
`;

exports[`LoanDetails Unit Test - Resolver query loanDetails 2 by id 1`] = `
Object {
  "approvedAmt": null,
  "comment": "Hello 0002",
  "contact": Object {
    "email": "c0002@fake.it",
    "name": "Contact 2",
    "phone": "555-0002",
    "salutation": null,
    "title": null,
  },
  "currency": "HKD",
  "loanId": "L0002",
  "loanType": "Post-Shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Loan Requester 2",
    "registration": "REG-0002",
    "type": null,
  },
  "startDate": "1542385275432",
  "tenor": 76,
}
`;

exports[`LoanDetails Unit Test - Resolver query loanDetails 3 by id 1`] = `
Object {
  "approvedAmt": null,
  "comment": "Hello 0003",
  "contact": Object {
    "email": "c0003@fake.it",
    "name": "Contact 3",
    "phone": "555-0003",
    "salutation": null,
    "title": null,
  },
  "currency": "HKD",
  "loanId": "L0003",
  "loanType": "Post-Shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Loan Requester 3",
    "registration": "REG-0003",
    "type": null,
  },
  "startDate": "1542385275433",
  "tenor": 76,
}
`;

exports[`LoanDetails Unit Test - Resolver query loanDetails 4 by id 1`] = `
Object {
  "approvedAmt": null,
  "comment": "Hello 0004",
  "contact": Object {
    "email": "c0004@fake.it",
    "name": "Contact 4",
    "phone": "555-0004",
    "salutation": null,
    "title": null,
  },
  "currency": "HKD",
  "loanId": "L0004",
  "loanType": "Post-Shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Loan Requester 4",
    "registration": "REG-0004",
    "type": null,
  },
  "startDate": "1542385275434",
  "tenor": 76,
}
`;

exports[`LoanDetails Unit Test - Resolver query loanDetails 5 by id 1`] = `
Object {
  "approvedAmt": null,
  "comment": "Hello 0005",
  "contact": Object {
    "email": "c0005@fake.it",
    "name": "Contact 5",
    "phone": "555-0005",
    "salutation": null,
    "title": "Manager",
  },
  "currency": "HKD",
  "loanId": "L0005",
  "loanType": "Post-Shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Loan Requester 5",
    "registration": "REG-0005",
    "type": null,
  },
  "startDate": "1542385275435",
  "tenor": 76,
}
`;

exports[`LoanDetails Unit Test - Resolver query loanDetails 6 by id 1`] = `
Object {
  "approvedAmt": null,
  "comment": "Hello 0006",
  "contact": Object {
    "email": "c0006@fake.it",
    "name": "Contact 6",
    "phone": "555-0006",
    "salutation": null,
    "title": null,
  },
  "currency": "HKD",
  "loanId": "L0006",
  "loanType": "Post-Shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Loan Requester 6",
    "registration": "REG-0006",
    "type": null,
  },
  "startDate": "1542385275436",
  "tenor": 76,
}
`;

exports[`LoanDetails Unit Test - Resolver query loanDetails 7 by id 1`] = `
Object {
  "approvedAmt": null,
  "comment": "Hello 0007",
  "contact": Object {
    "email": "c0007@fake.it",
    "name": "Contact 7",
    "phone": "555-0007",
    "salutation": null,
    "title": null,
  },
  "currency": "HKD",
  "loanId": "L0007",
  "loanType": "Post-Shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Loan Requester 7",
    "registration": "REG-0007",
    "type": "Da Yee Lung",
  },
  "startDate": "1542385275437",
  "tenor": 76,
}
`;

exports[`LoanDetails Unit Test - Resolver query loanDetails 8 by id 1`] = `
Object {
  "approvedAmt": 49998,
  "comment": "Hello 0008",
  "contact": Object {
    "email": "c0008@fake.it",
    "name": "Contact 8",
    "phone": "555-0008",
    "salutation": "Dr",
    "title": "Clerk",
  },
  "currency": "HKD",
  "loanId": "L0008",
  "loanType": "Pre-Shipment",
  "requestedAmt": 50001,
  "requester": Object {
    "name": "Loan Requester 8",
    "registration": "REG-0008",
    "type": "Da Yee Lung",
  },
  "startDate": "1542385275438",
  "tenor": 76,
}
`;
